--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "lib": ["es2017"],
     "strict": true,
     "paths": {
-      "grammy-js": ["src/index.ts"]
+      "grammy-ts": ["src/index.ts"]
     }
   },
   "include": ["src/**/*", "test/**/*"]
