build: rework tsconfig setup
* Add tsconfig files for both src and test folders
* Factor commong tsconfig into base file

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Another LL(K) grammar analyzer",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --p src/tsconfig.json",
     "test": "jest --forceExit --coverage --verbose",
     "test:watch": "npm run test -- --watchAll"
   },
