--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,14 @@
-# CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-# Use http://yaml-online-parser.appspot.com/ for validation
-
 version: 2
 jobs:
   build:
-    working_directory: ~/ngx-extensions
+    working_directory: ~/grammy-ts
     docker:
       - image: circleci/node:10.16.3
     steps:
       - checkout
-      # Download and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package-lock.json" }}
-            # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
       - run:
@@ -25,9 +18,12 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package-lock.json" }}
-      # - run:
-      #     name: lint
-      #     command: npm run lint:lib
+      - run:
+          name: format
+          command: npm run format
+      - run:
+          name: lint
+          command: npm run lint
       - run:
           name: test
           command: npm run test
