--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "build": "tsc --p src/tsconfig.json",
     "coveralls": "cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
     "test": "jest --forceExit --coverage --verbose",
-    "test:watch": "npm run test -- --watchAll"
+    "test:watch": "npm run test -- --watchAll",
+    "lint": "npm run lint:ts",
+    "lint:ts": "eslint {src,test}/**/*.ts",
+    "lint:ts--fix": "npm run lint:ts -- --fix",
+    "format": "prettier -c **/*.{ts,js,md,json}",
+    "format--fix": "npm run format -- --write"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -34,11 +39,15 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^24.0.18",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
+    "acorn": "^7.0.0",
     "coveralls": "^3.0.6",
+    "eslint": "^6.2.2",
+    "eslint-config-prettier": "^6.1.0",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.19.0",
     "typescript": "^3.5.3"
   },
   "dependencies": {
