--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,8 +7,8 @@
     "target": "es5",
     "downlevelIteration": true,
     "typeRoots": ["node_modules/@types"],
-    "module": "commonjs",
-    "lib": ["es2017"],
+    "module": "es2015",
+    "lib": ["es2019"],
     "paths": {
       "grammy-ts": ["src/index.ts"]
     }
