build: rework build script
* Add rollup in order to bundle the module
in multiple formats (umd, esm)
* Move jest config file
* Add metadata to package.json
* Rework npm scripts
* Add build step to circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,5 +30,8 @@ jobs:
       - run:
           name: coverage-report
           command: npm run coveralls
+      - run:
+          name: build
+          command: npm run build
       - store_test_results:
           path: coverage
