--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,13 +2,15 @@
   "compilerOptions": {
     "outDir": "dist",
     "baseUrl": ".",
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": true,
     "sourceMap": true,
-    "moduleResolution": "node",
-    "target": "es5",
     "downlevelIteration": true,
     "typeRoots": ["node_modules/@types"],
+    "moduleResolution": "node",
+    "target": "es5",
     "module": "es2015",
-    "lib": ["es2019"],
+    "lib": ["es2018"],
     "paths": {
       "grammy-ts": ["src/index.ts"]
     }
