build: add pre-bundle task
* Add gulp pipeline in order to
complete the pre-bundle steps
for the library (copy of meta files, .d.ts generation)
* Add gulp dependencies

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Another LL(K) grammar analyzer",
   "scripts": {
+    "pre-bundle": "npm run build && gulp",
     "build": "rm -rf dist && rollup -c config/rollup.config.ts",
     "coveralls": "cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js",
     "test": "jest -c config/jest.config.js --rootDir . --forceExit --coverage --verbose",
@@ -47,8 +48,14 @@
     "@typescript-eslint/parser": "^2.0.0",
     "acorn": "^7.0.0",
     "coveralls": "^3.0.6",
+    "dts-generator": "^3.0.0",
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.1.0",
+    "gulp": "^4.0.2",
+    "gulp-hub": "^4.2.0",
+    "gulp-ignore": "^3.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-typescript": "^5.0.1",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "rollup": "^1.20.1",
