--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grammy-ts",
   "version": "0.0.0",
-  "description": "Another LL(K) grammar analyzer",
+  "description": "Another LL(1) grammar analyzer",
   "scripts": {
     "pre-bundle": "npm run build && gulp",
     "build": "rm -rf dist && rollup -c config/rollup.config.ts",
